force-app/main/default/objects/Now_Yours_Translations__c/Now_Yours_Translations__c.object-meta.xml
<CustomObject>
    <label>Now Yours Translations</label>
    <nameField>
        <label>Language Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NY_Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>