force-app/main/default/objects/Now_Yours_Translations__c/fields/add_to_cart_store_stock_product__c.field-meta.xml
<CustomField>
    <fullName>add_to_cart_store_stock_product__c</fullName>
    <label>add_to_cart_store_stock_product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>