force-app/main/default/objects/Now_Yours_Translations__c/fields/alert_form_email_confirm__c.field-meta.xml
<CustomField>
    <fullName>alert_form_email_confirm__c</fullName>
    <label>alert_form_email_confirm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>