force-app/main/default/objects/Now_Yours_Translations__c/fields/breadcrumbs_cart_validation__c.field-meta.xml
<CustomField>
    <fullName>breadcrumbs_cart_validation__c</fullName>
    <label>breadcrumbs_cart_validation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>