force-app/main/default/objects/Now_Yours_Translations__c/fields/breadcrumbs_client_selection__c.field-meta.xml
<CustomField>
    <fullName>breadcrumbs_client_selection__c</fullName>
    <label>breadcrumbs_client_selection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>