force-app/main/default/objects/Now_Yours_Translations__c/fields/cancel_send__c.field-meta.xml
<CustomField>
    <fullName>cancel_send__c</fullName>
    <label>cancel_send</label>
    <length>255</length>
    <type>Text</type>
</CustomField>