force-app/main/default/objects/Now_Yours_Translations__c/fields/cart_button_cancelorder__c.field-meta.xml
<CustomField>
    <fullName>cart_button_cancelorder__c</fullName>
    <label>cart_button_cancelorder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>