force-app/main/default/objects/Now_Yours_Translations__c/fields/cart_client_phone__c.field-meta.xml
<CustomField>
    <fullName>cart_client_phone__c</fullName>
    <label>cart_client_phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>