force-app/main/default/objects/Now_Yours_Translations__c/fields/cart_clientadvisor_label__c.field-meta.xml
<CustomField>
    <fullName>cart_clientadvisor_label__c</fullName>
    <label>cart_clientadvisor_label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>