force-app/main/default/objects/Now_Yours_Translations__c/fields/cart_code_clientadvisor__c.field-meta.xml
<CustomField>
    <fullName>cart_code_clientadvisor__c</fullName>
    <label>cart_code_clientadvisor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>