force-app/main/default/objects/Now_Yours_Translations__c/fields/cart_deposit__c.field-meta.xml
<CustomField>
    <fullName>cart_deposit__c</fullName>
    <label>cart_deposit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>