force-app/main/default/objects/Now_Yours_Translations__c/fields/cart_lock_number__c.field-meta.xml
<CustomField>
    <fullName>cart_lock_number__c</fullName>
    <description>MIY-1973</description>
    <label>cart_lock_number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>