force-app/main/default/objects/Now_Yours_Translations__c/fields/cart_orderdate__c.field-meta.xml
<CustomField>
    <fullName>cart_orderdate__c</fullName>
    <label>cart_orderdate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>