force-app/main/default/objects/Now_Yours_Translations__c/fields/cart_orderid__c.field-meta.xml
<CustomField>
    <fullName>cart_orderid__c</fullName>
    <label>cart_orderid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>