force-app/main/default/objects/Now_Yours_Translations__c/fields/cart_page_title__c.field-meta.xml
<CustomField>
    <fullName>cart_page_title__c</fullName>
    <label>cart_page_title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>