force-app/main/default/objects/Now_Yours_Translations__c/fields/cart_product_noleadtime__c.field-meta.xml
<CustomField>
    <fullName>cart_product_noleadtime__c</fullName>
    <label>cart_product_noleadtime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>