force-app/main/default/objects/Now_Yours_Translations__c/fields/cart_storeOrderToDisplay__c.field-meta.xml
<CustomField>
    <fullName>cart_storeOrderToDisplay__c</fullName>
    <label>cart_storeOrderToDisplay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>