force-app/main/default/objects/Now_Yours_Translations__c/fields/cart_title_deposit__c.field-meta.xml
<CustomField>
    <fullName>cart_title_deposit__c</fullName>
    <label>cart_title_deposit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>