force-app/main/default/objects/Now_Yours_Translations__c/fields/cart_totalPrice__c.field-meta.xml
<CustomField>
    <fullName>cart_totalPrice__c</fullName>
    <label>cart_totalPrice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>