force-app/main/default/objects/Now_Yours_Translations__c/fields/client_addressLine1__c.field-meta.xml
<CustomField>
    <fullName>client_addressLine1__c</fullName>
    <label>client_addressLine1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>