force-app/main/default/objects/Now_Yours_Translations__c/fields/client_addressLine2__c.field-meta.xml
<CustomField>
    <fullName>client_addressLine2__c</fullName>
    <label>client_addressLine2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>