force-app/main/default/objects/Now_Yours_Translations__c/fields/client_button_mycc__c.field-meta.xml
<CustomField>
    <fullName>client_button_mycc__c</fullName>
    <label>client_button_mycc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>