force-app/main/default/objects/Now_Yours_Translations__c/fields/client_city__c.field-meta.xml
<CustomField>
    <fullName>client_city__c</fullName>
    <label>client_city</label>
    <length>255</length>
    <type>Text</type>
</CustomField>