force-app/main/default/objects/Now_Yours_Translations__c/fields/client_clientCode__c.field-meta.xml
<CustomField>
    <fullName>client_clientCode__c</fullName>
    <label>client_clientCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>