force-app/main/default/objects/Now_Yours_Translations__c/fields/client_country__c.field-meta.xml
<CustomField>
    <fullName>client_country__c</fullName>
    <label>client_country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>