force-app/main/default/objects/Now_Yours_Translations__c/fields/client_email__c.field-meta.xml
<CustomField>
    <fullName>client_email__c</fullName>
    <label>client_email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>