force-app/main/default/objects/Now_Yours_Translations__c/fields/client_firstName__c.field-meta.xml
<CustomField>
    <fullName>client_firstName__c</fullName>
    <label>client_firstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>