force-app/main/default/objects/Now_Yours_Translations__c/fields/client_lastName__c.field-meta.xml
<CustomField>
    <fullName>client_lastName__c</fullName>
    <label>client_lastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>