force-app/main/default/objects/Now_Yours_Translations__c/fields/client_lastName_katakana__c.field-meta.xml
<CustomField>
    <fullName>client_lastName_katakana__c</fullName>
    <label>client_lastName_katakana</label>
    <length>255</length>
    <type>Text</type>
</CustomField>