force-app/main/default/objects/Now_Yours_Translations__c/fields/client_mobilephone__c.field-meta.xml
<CustomField>
    <fullName>client_mobilephone__c</fullName>
    <label>client_mobilephone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>