force-app/main/default/objects/Now_Yours_Translations__c/fields/client_page_title__c.field-meta.xml
<CustomField>
    <fullName>client_page_title__c</fullName>
    <label>client_page_title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>