force-app/main/default/objects/Now_Yours_Translations__c/fields/client_passportNumber__c.field-meta.xml
<CustomField>
    <fullName>client_passportNumber__c</fullName>
    <label>client_passportNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>