force-app/main/default/objects/Now_Yours_Translations__c/fields/client_phone__c.field-meta.xml
<CustomField>
    <fullName>client_phone__c</fullName>
    <label>client_phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>