force-app/main/default/objects/Now_Yours_Translations__c/fields/client_prophone__c.field-meta.xml
<CustomField>
    <fullName>client_prophone__c</fullName>
    <label>client_prophone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>