force-app/main/default/objects/Now_Yours_Translations__c/fields/client_redirect_message__c.field-meta.xml
<CustomField>
    <fullName>client_redirect_message__c</fullName>
    <label>client_redirect_message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>