force-app/main/default/objects/Now_Yours_Translations__c/fields/client_zipCode__c.field-meta.xml
<CustomField>
    <fullName>client_zipCode__c</fullName>
    <label>client_zipCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>