force-app/main/default/objects/Now_Yours_Translations__c/fields/clientResult_button_mycc__c.field-meta.xml
<CustomField>
    <fullName>clientResult_button_mycc__c</fullName>
    <description>Button at the bottom of the page</description>
    <inlineHelpText>Button at the bottom of the page</inlineHelpText>
    <label>clientResult_button_mycc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>