force-app/main/default/objects/Now_Yours_Translations__c/fields/clientResult_button_select__c.field-meta.xml
<CustomField>
    <fullName>clientResult_button_select__c</fullName>
    <label>clientResult_button_select</label>
    <length>255</length>
    <type>Text</type>
</CustomField>