force-app/main/default/objects/Now_Yours_Translations__c/fields/clientResult_errorLine1__c.field-meta.xml
<CustomField>
    <fullName>clientResult_errorLine1__c</fullName>
    <label>clientResult_errorLine1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>