force-app/main/default/objects/Now_Yours_Translations__c/fields/clientResult_errorLine2__c.field-meta.xml
<CustomField>
    <fullName>clientResult_errorLine2__c</fullName>
    <label>clientResult_errorLine2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>