force-app/main/default/objects/Now_Yours_Translations__c/fields/clientResult_title_page__c.field-meta.xml
<CustomField>
    <fullName>clientResult_title_page__c</fullName>
    <label>clientResult_title_page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>