force-app/main/default/objects/Now_Yours_Translations__c/fields/clientResult_word_results__c.field-meta.xml
<CustomField>
    <fullName>clientResult_word_results__c</fullName>
    <label>clientResult_word_results</label>
    <length>255</length>
    <type>Text</type>
</CustomField>