force-app/main/default/objects/Now_Yours_Translations__c/fields/clientSearch_button_search__c.field-meta.xml
<CustomField>
    <fullName>clientSearch_button_search__c</fullName>
    <label>clientSearch_button_search</label>
    <length>255</length>
    <type>Text</type>
</CustomField>