force-app/main/default/objects/Now_Yours_Translations__c/fields/clientSearch_ph_rmsId__c.field-meta.xml
<CustomField>
    <fullName>clientSearch_ph_rmsId__c</fullName>
    <label>clientSearch_ph_rmsId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>