force-app/main/default/objects/Now_Yours_Translations__c/fields/copy_QR_code_URL_label__c.field-meta.xml
<CustomField>
    <fullName>copy_QR_code_URL_label__c</fullName>
    <label>copy_QR_code_URL_label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>