force-app/main/default/objects/Now_Yours_Translations__c/fields/copy_recipe_id__c.field-meta.xml
<CustomField>
    <fullName>copy_recipe_id__c</fullName>
    <label>copy_recipe_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>