force-app/main/default/objects/Now_Yours_Translations__c/fields/create_reservations_mypr__c.field-meta.xml
<CustomField>
    <fullName>create_reservations_mypr__c</fullName>
    <label>create_reservations_mypr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>