force-app/main/default/objects/Now_Yours_Translations__c/fields/detail_label__c.field-meta.xml
<CustomField>
    <fullName>detail_label__c</fullName>
    <label>detail_label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>