force-app/main/default/objects/Now_Yours_Translations__c/fields/disconnect_text__c.field-meta.xml
<CustomField>
    <fullName>disconnect_text__c</fullName>
    <label>disconnect_text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>