force-app/main/default/objects/Now_Yours_Translations__c/fields/email_error_title__c.field-meta.xml
<CustomField>
    <fullName>email_error_title__c</fullName>
    <label>email_error_title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>