force-app/main/default/objects/Now_Yours_Translations__c/fields/email_subject__c.field-meta.xml
<CustomField>
    <fullName>email_subject__c</fullName>
    <description>For email sent in validation page</description>
    <inlineHelpText>For email sent in validation page</inlineHelpText>
    <label>email_subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>