force-app/main/default/objects/Now_Yours_Translations__c/fields/empty_favorite_title__c.field-meta.xml
<CustomField>
    <fullName>empty_favorite_title__c</fullName>
    <label>empty-favorite-title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>