force-app/main/default/objects/Now_Yours_Translations__c/fields/empty_quick_access__c.field-meta.xml
<CustomField>
    <fullName>empty_quick_access__c</fullName>
    <label>empty_quick_access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>