force-app/main/default/objects/Now_Yours_Translations__c/fields/error_CA_code_too_long__c.field-meta.xml
<CustomField>
    <fullName>error_CA_code_too_long__c</fullName>
    <label>error_CA_code_too_long</label>
    <length>255</length>
    <type>Text</type>
</CustomField>