force-app/main/default/objects/Now_Yours_Translations__c/fields/error_CA_name_empty__c.field-meta.xml
<CustomField>
    <fullName>error_CA_name_empty__c</fullName>
    <label>error_CA_name_empty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>