force-app/main/default/objects/Now_Yours_Translations__c/fields/error_empty_cart__c.field-meta.xml
<CustomField>
    <fullName>error_empty_cart__c</fullName>
    <label>error_empty_cart</label>
    <length>255</length>
    <type>Text</type>
</CustomField>