force-app/main/default/objects/Now_Yours_Translations__c/fields/error_generic__c.field-meta.xml
<CustomField>
    <fullName>error_generic__c</fullName>
    <label>error_generic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>