force-app/main/default/objects/Now_Yours_Translations__c/fields/error_missing_parameter__c.field-meta.xml
<CustomField>
    <fullName>error_missing_parameter__c</fullName>
    <label>error_missing_parameter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>