force-app/main/default/objects/Now_Yours_Translations__c/fields/favorite_button_deleteall__c.field-meta.xml
<CustomField>
    <fullName>favorite_button_deleteall__c</fullName>
    <label>favorite_button_deleteall</label>
    <length>255</length>
    <type>Text</type>
</CustomField>