force-app/main/default/objects/Now_Yours_Translations__c/fields/favorite_product_button_addToCart__c.field-meta.xml
<CustomField>
    <fullName>favorite_product_button_addToCart__c</fullName>
    <label>favorite_product_button_addToCart</label>
    <length>255</length>
    <type>Text</type>
</CustomField>