force-app/main/default/objects/Now_Yours_Translations__c/fields/filter_gender_women__c.field-meta.xml
<CustomField>
    <fullName>filter_gender_women__c</fullName>
    <label>filter_gender_women</label>
    <length>255</length>
    <type>Text</type>
</CustomField>