force-app/main/default/objects/Now_Yours_Translations__c/fields/filters__c.field-meta.xml
<CustomField>
    <fullName>filters__c</fullName>
    <label>filters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>