force-app/main/default/objects/Now_Yours_Translations__c/fields/filters_sort_view_results__c.field-meta.xml
<CustomField>
    <fullName>filters_sort_view_results__c</fullName>
    <label>filters_sort_view_results</label>
    <length>255</length>
    <type>Text</type>
</CustomField>