force-app/main/default/objects/Now_Yours_Translations__c/fields/followup_text1__c.field-meta.xml
<CustomField>
    <fullName>followup_text1__c</fullName>
    <label>followup_text1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>