force-app/main/default/objects/Now_Yours_Translations__c/fields/followup_text2__c.field-meta.xml
<CustomField>
    <fullName>followup_text2__c</fullName>
    <label>followup_text2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>