force-app/main/default/objects/Now_Yours_Translations__c/fields/form_email_sendemail_title__c.field-meta.xml
<CustomField>
    <fullName>form_email_sendemail_title__c</fullName>
    <label>form_email_sendemail_title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>