force-app/main/default/objects/Now_Yours_Translations__c/fields/friendmessage_label__c.field-meta.xml
<CustomField>
    <fullName>friendmessage_label__c</fullName>
    <label>friendmessage_label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>