force-app/main/default/objects/Now_Yours_Translations__c/fields/header_ph_searchbar__c.field-meta.xml
<CustomField>
    <fullName>header_ph_searchbar__c</fullName>
    <label>header_ph_searchbar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>