force-app/main/default/objects/Now_Yours_Translations__c/fields/helper_company__c.field-meta.xml
<CustomField>
    <fullName>helper_company__c</fullName>
    <label>helper_company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>