force-app/main/default/objects/Now_Yours_Translations__c/fields/helper_doctorandmrs__c.field-meta.xml
<CustomField>
    <fullName>helper_doctorandmrs__c</fullName>
    <description>Traduction for doctor and mrs</description>
    <inlineHelpText>Traduction for doctor and mrs</inlineHelpText>
    <label>helper_doctorandmrs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>