force-app/main/default/objects/Now_Yours_Translations__c/fields/helper_doctorf__c.field-meta.xml
<CustomField>
    <fullName>helper_doctorf__c</fullName>
    <description>Traduction for female doctor</description>
    <inlineHelpText>Traduction for female doctor</inlineHelpText>
    <label>helper_doctorf</label>
    <length>255</length>
    <type>Text</type>
</CustomField>