force-app/main/default/objects/Now_Yours_Translations__c/fields/helper_doctorm__c.field-meta.xml
<CustomField>
    <fullName>helper_doctorm__c</fullName>
    <description>Traduction for male doctor</description>
    <inlineHelpText>Traduction for male doctor</inlineHelpText>
    <label>helper_doctorm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>