force-app/main/default/objects/Now_Yours_Translations__c/fields/helper_ladies__c.field-meta.xml
<CustomField>
    <fullName>helper_ladies__c</fullName>
    <label>helper_ladies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>