force-app/main/default/objects/Now_Yours_Translations__c/fields/helper_mr__c.field-meta.xml
<CustomField>
    <fullName>helper_mr__c</fullName>
    <description>Traduction for Mr</description>
    <inlineHelpText>Traduction for Mr</inlineHelpText>
    <label>helper_mr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>