force-app/main/default/objects/Now_Yours_Translations__c/fields/helper_mrs__c.field-meta.xml
<CustomField>
    <fullName>helper_mrs__c</fullName>
    <description>Traduction for Mrs</description>
    <inlineHelpText>Traduction for Mrs</inlineHelpText>
    <label>helper_mrs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>