force-app/main/default/objects/Now_Yours_Translations__c/fields/helper_mrsandmr__c.field-meta.xml
<CustomField>
    <fullName>helper_mrsandmr__c</fullName>
    <description>Traduction for Mrs &amp; Mr</description>
    <inlineHelpText>Traduction for Mrs &amp; Mr</inlineHelpText>
    <label>helper_mrsandmr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>