force-app/main/default/objects/Now_Yours_Translations__c/fields/helper_ms__c.field-meta.xml
<CustomField>
    <fullName>helper_ms__c</fullName>
    <description>Traduction for Ms</description>
    <inlineHelpText>Traduction for Ms</inlineHelpText>
    <label>helper_ms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>