force-app/main/default/objects/Now_Yours_Translations__c/fields/helper_samaf__c.field-meta.xml
<CustomField>
    <fullName>helper_samaf__c</fullName>
    <label>helper_samaf</label>
    <length>255</length>
    <type>Text</type>
</CustomField>