force-app/main/default/objects/Now_Yours_Translations__c/fields/helper_sirs__c.field-meta.xml
<CustomField>
    <fullName>helper_sirs__c</fullName>
    <label>helper_sirs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>