force-app/main/default/objects/Now_Yours_Translations__c/fields/home_creation_text_second_part__c.field-meta.xml
<CustomField>
    <fullName>home_creation_text_second_part__c</fullName>
    <label>home_creation_text_second_part</label>
    <length>255</length>
    <type>Text</type>
</CustomField>