force-app/main/default/objects/Now_Yours_Translations__c/fields/info_leadtime_min__c.field-meta.xml
<CustomField>
    <fullName>info_leadtime_min__c</fullName>
    <label>info_leadtime_min</label>
    <length>255</length>
    <type>Text</type>
</CustomField>