force-app/main/default/objects/Now_Yours_Translations__c/fields/last_views_title__c.field-meta.xml
<CustomField>
    <fullName>last_views_title__c</fullName>
    <label>last_views_title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>