force-app/main/default/objects/Now_Yours_Translations__c/fields/listProduct_filter_title_color__c.field-meta.xml
<CustomField>
    <fullName>listProduct_filter_title_color__c</fullName>
    <label>listProduct_filter_title_color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>