force-app/main/default/objects/Now_Yours_Translations__c/fields/listProduct_from_text__c.field-meta.xml
<CustomField>
    <fullName>listProduct_from_text__c</fullName>
    <label>listProduct_from_text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>