force-app/main/default/objects/Now_Yours_Translations__c/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <label>Locale</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>