force-app/main/default/objects/Now_Yours_Translations__c/fields/missing_characters_searchbar__c.field-meta.xml
<CustomField>
    <fullName>missing_characters_searchbar__c</fullName>
    <label>missing_characters_searchbar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>