force-app/main/default/objects/Now_Yours_Translations__c/fields/mypr_popup_accept__c.field-meta.xml
<CustomField>
    <fullName>mypr_popup_accept__c</fullName>
    <label>mypr_popup_accept</label>
    <length>255</length>
    <type>Text</type>
</CustomField>